--- a/src/styles.css
+++ b/src/styles.css
@@ -11,13 +11,7 @@
 body {
     font-family: 'Roboto', sans-serif;
     background-color: #f5f5f5;
-    overflow: hidden;
-}
-
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 15px;
+    /* overflow: hidden; */
 }
 
 .nav-bar {
@@ -50,6 +44,22 @@ body {
 #nav-tabs ul {
     display: flex;
     justify-content: right;
+    margin-right: 15px;
     align-items: center;
     list-style: none;
 }
+
+.hero {
+    background-color:rgba(0, 0, 0, 0.1); 
+    background-size: cover; 
+    background-position: center center; 
+    height: 100vh; 
+    width: 100%;
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    text-align: center; 
+    color: #fff; 
+  }
+  
+  
