add: contact page

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,7 @@
 body {
   font-family: "Roboto", sans-serif;
   background-color: #f5f5f5;
-  /* overflow: hidden; */
+  
 }
 
 .nav-bar {
@@ -170,10 +170,9 @@ body {
   line-height: 1.5;
 }
 .service-container {
-    display: flex;
-   align-items: center;
+  display: flex;
+  align-items: center;
 }
-
 
 .service {
   display: flex;
@@ -190,10 +189,9 @@ body {
 }
 
 .service-text p {
-    font-size: 1.2rem;
-    line-height: 1.5;
-    margin-top: 20px;
-
+  font-size: 1.2rem;
+  line-height: 1.5;
+  margin-top: 20px;
 }
 
 .service-image {
@@ -208,72 +206,71 @@ body {
 }
 
 @media only screen and (max-width: 768px) {
-    .service {
-      flex-direction: column;
-      height: auto;
-    }
-  
-    .service-text {
-      margin-top: 0;
-      padding: 20px;
-      text-align: center;
-    }
-  
-    .service-image {
-      padding: 20px;
-      text-align: center;
-    }
-  
-    .service-image img {
-      max-width: 100%;
-      margin-top: 0;
-      box-shadow: none;
-    }
-  }
-  
-  @media only screen and (min-width: 768px) {
-    .service-container {
-      display: flex;
-      align-items: center;
-    }
-  
-    .service {
-      display: flex;
-      flex-direction: row;
-      background-color: #98b4c2;
-      height: 700px;
-    }
-  
-    .service-text {
-      flex: 1;
-      padding: 20px;
-      margin-top: 180px;
-      color: white;
-    }
-  
-    .service-text p {
-      font-size: 1.2rem;
-      line-height: 1.5;
-      margin-top: 20px;
-    }
-  
-    .service-image {
-      flex: 1;
-      padding: 20px;
-    }
-  
-    .service-image img {
-      max-width: 100%;
-      margin-top: 160px;
-      box-shadow: -1px 19px 19px 17px rgb(0 0 0 / 16%);
-    }
+  .service {
+    flex-direction: column;
+    height: auto;
   }
 
-.save-container {
-    display: flex;
-   align-items: center;
+  .service-text {
+    margin-top: 0;
+    padding: 20px;
+    text-align: center;
+  }
+
+  .service-image {
+    padding: 20px;
+    text-align: center;
+  }
+
+  .service-image img {
+    max-width: 100%;
+    margin-top: 0;
+    box-shadow: none;
+  }
 }
 
+@media only screen and (min-width: 768px) {
+  .service-container {
+    display: flex;
+    align-items: center;
+  }
+
+  .service {
+    display: flex;
+    flex-direction: row;
+    background-color: #98b4c2;
+    height: 700px;
+  }
+
+  .service-text {
+    flex: 1;
+    padding: 20px;
+    margin-top: 180px;
+    color: white;
+  }
+
+  .service-text p {
+    font-size: 1.2rem;
+    line-height: 1.5;
+    margin-top: 20px;
+  }
+
+  .service-image {
+    flex: 1;
+    padding: 20px;
+  }
+
+  .service-image img {
+    max-width: 100%;
+    margin-top: 160px;
+    box-shadow: -1px 19px 19px 17px rgb(0 0 0 / 16%);
+  }
+}
+
+.save-container {
+  display: flex;
+  align-items: center;
+}
 
 .save-section {
   display: flex;
@@ -287,14 +284,12 @@ body {
   padding: 20px;
   margin-top: 200px;
   color: rgb(255, 255, 255);
-
 }
 
 .save-section-text p {
-    font-size: 1.2rem;
-    line-height: 1.5;
-    margin-top: 20px;
-
+  font-size: 1.2rem;
+  line-height: 1.5;
+  margin-top: 20px;
 }
 
 .save-section-image {
@@ -303,91 +298,139 @@ body {
 }
 
 .save-section-image img {
-  
   margin-top: 160px;
   box-shadow: -1px 19px 19px 17px rgb(0 0 0 / 16%);
 }
 
 @media only screen and (max-width: 768px) {
-    .save-container {
-      flex-direction: column;
-      height: auto;
-    }
-  
-    .save-section-text {
-      margin-top: 0;
-      padding: 20px;
-      text-align: center;
-    }
-  
-    .save-section {
-      padding: 20px;
-      text-align: center;
-    }
-  
-    .save-section-image img {
-      max-width: 100%;
-      margin-top: 0;
-      box-shadow: none;
-    }
-  }
-  
-  @media only screen and (min-width: 768px) {
-    .save-container {
-      display: flex;
-      align-items: center;
-    }
-  
-    .save-section {
-      display: flex;
-      flex-direction: row;
-      background-color: #c0c0c0;
-      height: 700px;
-    }
-  
-    .save-section-text {
-      flex: 1;
-      padding: 20px;
-      color: rgb(255, 255, 255);
-    }
-  
-    .save-section-text {
-      font-size: 1.2rem;
-      line-height: 1.5;
-      margin-top: 190px;
-    }
-  
-    .save-section-image {
-      flex: 1;
-      padding: 20px;
-    }
-  
-    .save-section img {
-      max-width: 100%;
-      margin-top: 160px;
-      box-shadow: -1px 19px 19px 17px rgb(0 0 0 / 16%);
-    }
+  .save-container {
+    flex-direction: column;
+    height: auto;
   }
 
-
-.footer {
-    background-color: #f2f2f2;
+  .save-section-text {
+    margin-top: 0;
     padding: 20px;
     text-align: center;
   }
-  
-  .footer-text {
-    font-size: 1.2rem;
-    color: #555;
+
+  .save-section {
+    padding: 20px;
+    text-align: center;
   }
-  
-  .footer-text h2 {
+
+  .save-section-image img {
+    max-width: 100%;
     margin-top: 0;
-    margin-bottom: 10px;
+    box-shadow: none;
   }
+}
+
+@media only screen and (min-width: 768px) {
+  .save-container {
+    display: flex;
+    align-items: center;
+  }
+
+  .save-section {
+    display: flex;
+    flex-direction: row;
+    background-color: #c0c0c0;
+    height: 700px;
+  }
+
+  .save-section-text {
+    flex: 1;
+    padding: 20px;
+    color: rgb(255, 255, 255);
+  }
+
+  .save-section-text {
+    font-size: 1.2rem;
+    line-height: 1.5;
+    margin-top: 190px;
+  }
+
+  .save-section-image {
+    flex: 1;
+    padding: 20px;
+  }
+
+  .save-section img {
+    max-width: 100%;
+    margin-top: 160px;
+    box-shadow: -1px 19px 19px 17px rgb(0 0 0 / 16%);
+  }
+}
+
+.footer {
+  background-color: #f2f2f2;
+  padding: 20px;
+  text-align: center;
+}
+
+.footer-text {
+  font-size: 1.2rem;
+  color: #555;
+}
+
+.footer-text h2 {
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
+#creator-link {
+  color: #555;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+/* ######################### Contact form #################################### */
+
+#contact-container {
+  display: flex;
+  flex-wrap: wrap;
+  height: 700px;
+  align-content: space-between;
   
-  #creator-link {
-    color: #555;
-    text-decoration: none;
-    font-weight: bold;
-  }
+  align-items: center;
+}
+
+#contact-img {
+  margin-left: 21vh;
+    margin-right: 69px;
+    margin-top: 10vh;
+}
+#contact-img img {
+  width: 600px;
+  height: 500px;
+  float: left;
+  
+}
+
+#contact-form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  position: relative;
+  right: 20px;
+  float: right;
+}
+
+#contact-form form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+
+}
+
+#contact-form form label {
+  font-size: 30px;
+  
+}
+
+#contact-form form input {
+  height: 10 px;
+  border: none;
+}
+
