--- a/src/partners-styles.css
+++ b/src/partners-styles.css
@@ -80,11 +80,101 @@ body {
   font-weight: bold;
 }
 
-#apologies {
+/* #apologies {
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 200px auto 30px auto;
   width: 100%;
   height: 100px;
+} */
+
+#partner-hero {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 68vh;
+  background-image: url("https://images2.alphacoders.com/132/1323443.jpg");
+  background-size: cover;
+}
+
+#partner-hero-text {
+  background-color: rgba(112, 215, 255, 0.4);
+  backdrop-filter: blur(1px);
+  opacity: 1;
+  border-radius: 10px;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  overflow: hidden;
+}
+
+#partner-hero-text h1 {
+  color: #000000;
+  font-size: 4rem;
+  font-weight: 800;
+  width: 49%;
+  text-align: center;
+}
+
+#our-goals-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40vh;
+}
+
+#our-goals-card-text {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  margin: 30px 30px;
+}
+
+#our-goals-card-text h1 {
+  font-size: 2rem;
+  font-weight: 800;
+  color: #74b6ca;
+  margin: 10px 10px;
+}
+
+#our-goals-card-text p {
+  font-size: 20px;
+  margin-bottom: 100px;
+}
+
+#our-goals-card h2 {
+  margin-top: 100px;
+}
+
+#our-services {
+  background-color: rgb(155, 194, 210);
+  display: flex;
+  justify-content: center;
+  height: 65vh;
+  flex-direction: column;
+  align-items: center;
+}
+
+#our-services h1 {
+  margin-bottom: 50px;
+}
+
+#our-services-cards {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.our-services-card {
+  margin: 50px;
+  border: white 10px solid;
+  border-radius: 10px;
+  width: 300px;
+  height: 300px;
+  padding: 20px;
+  text-align: center;
 }
